feat: add link with 'repasse de taxas'

--- a/packages/pilot/public/locales/pt/translations.json
+++ b/packages/pilot/public/locales/pt/translations.json
@@ -1744,12 +1744,19 @@
           "boleto_info_2": "que o seu cliente gerar o boleto.",
           "boleto_input_label": "Dias para o vencimento",
           "credit_card": "Cartão de crédito",
+          "charge_transaction_fee_info_1": "Oferecemos parcelamento em",
+          "charge_transaction_fee_info_2": " 12 vezes, ",
+          "charge_transaction_fee_info_3": "escolha o modelo de juros oferecido",
+          "company_pays_interest_rate_value": "Eu pago as taxas de juros",
+          "customer_pays_interest_rate_value": "Cliente paga pela taxa de juros",
+          "max_free_installments_label": "Quantidade de parcelas sem juros",
+          "fee_payer_label": "Opções de parcelamento",
           "max_installments_label": "Limites de parcelas",
           "transfer_fees_label": "Opções de parcelamento",
           "installment_value_singular": "Máximo de 1 parcela",
           "installment_value_plural": "Máximo de {{installment}} parcelas",
           "installment_options_singular": "Sem juros à vista",
-          "installment_options_plural": "Parcelamento sem juros até {{installment}} parcelas",
+          "installment_options_plural": "Sem juros até {{installment}} parcelas",
           "percent_per_month_1": "Porcentagem de juros ",
           "percent_per_month_2": "ao mês",
           "title": "Meios de pagamento",
