--- a/packages/pilot/public/locales/pt/translations.json
+++ b/packages/pilot/public/locales/pt/translations.json
@@ -1435,6 +1435,7 @@
         "cancel": "Cancelar",
         "menu": "Configurações",
         "tab": {
+          "antifraud": "Antifraude",
           "fees": "Taxas e Serviços",
           "general": "Geral",
           "boleto": "Boleto",
